# jp-lox

./: Cargo.toml  Justfile  README.md
src/: builtins.rs  char_enum.rs  const_enum.rs  environment.rs  evaluator.rs  main.rs  named_source.rs  parser.rs  span.rs  tokenizer.rs  values.rs
tests/: evaluator.json  parser.json  run.json  tokenizer.json
tests/evaluator/: binary-minus-with-negation.lox  binary-string-concat.lox
tests/parser/: unary-application.lox
tests/run/: block-shadowing.lox  multi-line-strings.lox  unicode.lox  variable-as-expr.lox  variable.lox
tests/tokenizer/: strings-with-escapes.lox
