[package]
name = "codecrafters-interpreter"
version = "0.1.1"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
convert_case = "0.6.0"
derive_more = { version = "1.0.0", features = ["display"] }
